<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_med_reminder"
            android:icon="@drawable/ic_reminder"
            android:title="@string/menu_med" />
        <item
            android:id="@+id/nav_health"
            android:icon="@drawable/ic_health"
            android:title="@string/menu_health" />
        <item
            android:id="@+id/nav_first"
            android:icon="@drawable/ic_first_aid"
            android:title="@string/menu_first" />

        <item
            android:id="@+id/nav_notes"
            android:icon="@drawable/ic_note"
            android:title="@string/menu_notes" />
        <item
            android:id="@+id/nav_bmi"
            android:icon="@drawable/ic_calculator"
            android:title="@string/menu_bmi" />

        <item
            android:id="@+id/nav_report"
            android:icon="@drawable/ic_assignment_black_24dp"
            android:title="@string/menu_report" />

    </group>


    <item android:title="Near By">
        <menu>
            <item
                android:id="@+id/nav_hosp"
                android:icon="@drawable/ic_hospital_1"
                android:title="@string/menu_hosp" />
            <item
                android:id="@+id/nav_doc"
                android:icon="@drawable/ic_doctor"
                android:title="@string/menu_doc" />
            <item
                android:id="@+id/nav_medical"
                android:icon="@drawable/ic_medical"
                android:title="@string/menu_medical" />

        </menu>
    </item>


    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_profile"
                android:icon="@drawable/ic_profile"
                android:title="@string/menu_profile" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/menu_send" />

            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/menu_share" />
        </menu>
    </item>

</menu>
